--- a/househunt/workscore/templates/index.html
+++ b/househunt/workscore/templates/index.html
@@ -4,22 +4,23 @@
     <head>
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/base-min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
-            .time-1 {
-                color: forestgreen;
+            h1 {
+                text-align: center;
+                font-size: 600%;
+                color: #757575;
+                font-weight: 100;
+                font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+                letter-spacing: 0.05em;
+                margin-top: 200px;
+                margin-bottom: 0.2em;
             }
-            .time-2 {
-                color: darkorange;
+            #search {
+                text-align: center;
             }
-            .time-3 {
-                color: crimson;
-            }
-            .distance {
-                color: grey;
-            }
-            img {
-                width: 100%;
+            input {
+                width: 320px;
             }
         </style>
         <meta charset="utf-8">
@@ -29,34 +30,15 @@
 
     <body>
         <div class="pure-g">
-            <div class="pure-u-1-24"></div>
-            <div class="pure-u-1-2">
-                <h2>{{data.origin}}</h2>
-                <table class="pure-table">
-                    <thead>
-                        <tr>
-                            <th><i class="material-icons">place</i></th>
-                            <th><i class="material-icons">directions_walk</i></th>
-                            <th><i class="material-icons">directions_bike</i></th>
-                            <th><i class="material-icons">directions_bus</i></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for dest in data.destinations %}
-                        <tr>
-                            <td>{{dest.name}}</td>
-                            <td><font class="{{dest.walking.class}}">{{dest.walking.duration}}</font><font class="distance"> / {{dest.walking.distance}}</font></td>
-                            <td><font class="{{dest.bicycling.class}}">{{dest.bicycling.duration}}</font><font class="distance"> / {{dest.bicycling.distance}}</font></td>
-                            <td><font class="{{dest.transit.class}}">{{dest.transit.duration}}</font><font class="distance"> / {{dest.transit.distance}}</font></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+            <div class="pure-u-1">
+                <h1>Work Score</h1>
+                <form class="pure-form" id="search" action="/score" method="get">
+                    <fieldset>
+                        <input type="text" placeholder="Type an address" name="addr">
+                        <button type="submit" class="pure-button pure-button-primary"><i class="fa fa-search" aria-hidden="true"></i></button>
+                    </fieldset>
+                </form>
             </div>
-            <div class="pure-u-5-12">
-                <p><img src="{{map_url}}"></p>
-            </div>
-            <div class="pure-u-1-24"></div>
         </div>
     </body>
 </html>
